fixed image squish for group images

--- a/react-app/src/components/StudyGroups/Group/Group.css
+++ b/react-app/src/components/StudyGroups/Group/Group.css
@@ -12,15 +12,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    /* height: 100%; */
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
 }
 
 .group-container img {
     background-color: rgba(255, 255, 255, 0.322);
     border-radius: 10px;
-    height: 150px;
-    width: 150px;
+    /* height: 150px; */
+    width: 100%;
+    height: 100%;
 
+    object-fit: cover;
 }
 
 .group-container {
